Scope Rules (Variable Scopes) in Go

--- a/README
+++ b/README
@@ -55,6 +55,6 @@ go run .
 ___________________________________________________________________________________
 You can export: variables, functions, constant, types
 ___________________________________________________________________________________
-
+Scope Rules (Variable Scopes) in Go
 
 
