--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 # acronproject_go
 
-First Teacher is Nana. from YouTub: TechWorld with Nana
+First Teacher is Nana Janashia. from YouTub: TechWorld with Nana
 
 
 
