--- a/README
+++ b/README
@@ -82,6 +82,10 @@ Maps
     > You can retrieve the value by using its key later
     > All keys have the same data type 
     > All values have the same data type
+    Example, Slice Like List PYTHON:
+    var my_slice []string
+    Example, Map Like Dictionary PYTHON:
+    var my_map = map[string]string
 
 
 
