For this target, write this code:         > strconv.FormatUint(uint64(get_age_number), 10)         10 in the end is Decimal number

--- a/README
+++ b/README
@@ -94,7 +94,10 @@ Definetion:
     > my_map["Keys1"] = Values2
     > my_map["Keys3"] = Values3
 
-    For adding another type, We need to convert that to default Keys and Values Type
+For adding another type, We need to convert that to default Keys and Values Type:
+    For this target, write this code:
+        > strconv.FormatUint(uint64(get_age_number), 10)
+        10 in the end is Decimal number
 
 
 
