--- a/README
+++ b/README
@@ -98,7 +98,9 @@ For adding another type, We need to convert that to default Keys and Values Type
     For this target, write this code:
         > strconv.FormatUint(uint64(get_age_number), 10)
         10 in the end is Decimal number
-
+    For Memorize :
+	    > user_Data["age_number"] = strconv.FormatUint(uint64(get_age_number), 10)
+        
 
 
 
