--- a/README
+++ b/README
@@ -101,6 +101,8 @@ For adding another type, We need to convert that to default Keys and Values Type
     For Memorize :
 	    > user_Data["age_number"] = strconv.FormatUint(uint64(get_age_number), 10)
         
+___________________________________________________________________________________
+Struct Data Type
 
 
 
