--- a/README
+++ b/README
@@ -100,11 +100,14 @@ For adding another type, We need to convert that to default Keys and Values Type
         10 in the end is Decimal number
     For Memorize :
 	    > user_Data["age_number"] = strconv.FormatUint(uint64(get_age_number), 10)
-        
+
+Map supports only 1 data type
+* How can we save mixed data types values for every issues ?
 ___________________________________________________________________________________
 Struct Data Type
-
-
+    - Stands for "Structure"
+    - Can hold mixed data types
+    - Collect different data types of data on users 
 
 
 
