--- a/README
+++ b/README
@@ -123,6 +123,9 @@ Struct Data Type
       Mixed data type
       Defining a structure (which fields) of the User Type
     - It's like a lightweight class, which e.g doesn't support inheritance از وراثت پشتیبانی نمی کند
+    ________________________________________
+    - For append:
+      Go suggests the field names of our User type
 
 
 ___________________________________________________________________________________
