Go Routines - Concurrency

--- a/README
+++ b/README
@@ -127,11 +127,11 @@ Struct Data Type
     - For append:
       Go suggests the field names of our User type
 
-
+    ________________________________________
+    When to Use “e.g.” and “i.e.” While Writing Your Paper
+    We see them often in text, usually in parentheses, and we can usually figure out the context from the text before them, but what do those letters mean? The abbreviation “e.g.” stands for the Latin exempli gratia, which means “for example” or “for the sake of example.” The abbreviation “i.e.” stands for the Latin phrase id est, which means “that is to say” or “in other words.” When writing, we often use these terms like examples (e.g.) to emphasize a point or use (i.e.) to state the point in a different way without a long explanation.
 ___________________________________________________________________________________
-When to Use “e.g.” and “i.e.” While Writing Your Paper
-We see them often in text, usually in parentheses, and we can usually figure out the context from the text before them, but what do those letters mean? The abbreviation “e.g.” stands for the Latin exempli gratia, which means “for example” or “for the sake of example.” The abbreviation “i.e.” stands for the Latin phrase id est, which means “that is to say” or “in other words.” When writing, we often use these terms like examples (e.g.) to emphasize a point or use (i.e.) to state the point in a different way without a long explanation.
-
+Go Routines - Concurrency
 
 
 
