Go Routines - Concurrency +     - Simulate a long processing task     - Generate and send ticket

--- a/README
+++ b/README
@@ -132,6 +132,8 @@ Struct Data Type
     We see them often in text, usually in parentheses, and we can usually figure out the context from the text before them, but what do those letters mean? The abbreviation “e.g.” stands for the Latin exempli gratia, which means “for example” or “for the sake of example.” The abbreviation “i.e.” stands for the Latin phrase id est, which means “that is to say” or “in other words.” When writing, we often use these terms like examples (e.g.) to emphasize a point or use (i.e.) to state the point in a different way without a long explanation.
 ___________________________________________________________________________________
 Go Routines - Concurrency
+    - Simulate a long processing task
+    - Generate and send ticket
 
 
 
