--- a/README
+++ b/README
@@ -27,6 +27,9 @@ tag 0.0.42:
 tag 0.0.43:
 - Delete mac & Windows 
 
+tag 0.0.44:
+- Learn Building a Port Scanner
+
 
 ___________________________________________________________________________________
 Make Code cleaner with
