- But I delete it because is I don't know how use two go.mod in side togather

--- a/README
+++ b/README
@@ -29,6 +29,7 @@ tag 0.0.43:
 
 tag 0.0.44:
 - Learn Building a Port Scanner
+- But I delete it because is I don't know how use two go.mod in side togather
 
 
 ___________________________________________________________________________________
