tag 0.0.45: - New tag for continue

--- a/README
+++ b/README
@@ -31,7 +31,8 @@ tag 0.0.44:
 - Learn Building a Port Scanner
 - But I delete it because is I don't know how use two go.mod in side togather
 
-
+tag 0.0.45:
+- New tag for continue
 ___________________________________________________________________________________
 Make Code cleaner with
 package level variables
