--- a/README
+++ b/README
@@ -33,6 +33,9 @@ tag 0.0.44:
 
 tag 0.0.45:
 - New tag for continue
+
+tag 0.0.46:
+- Implement codes for better showing in CLI and give sence of AI something is doing ... [*]
 ___________________________________________________________________________________
 Make Code cleaner with
 package level variables
