--- a/README
+++ b/README
@@ -1,4 +1,7 @@
 # acronproject_go
 
 tag 0.1.00NanaJanashia:
- End of learning from Nana Janashia
+    End of learning from Nana Janashia
+-----------------------------------------
+tag 0.1.01:
+    Learn from YouTube channel neonlearn
